fix: add Java-version-aware HotSwapAgent `--add-opens` JVM args for both RunConfiguration and Gradle `JavaExec` (#145)
* fix: add Java-version-aware HotSwapAgent `--add-opens` JVM args for both RunConfiguration and Gradle `JavaExec` [#143](https://github.com/ghostflyby/IntelliJ-Plugins/issues/143)

* chore: bump EnhancedHotSwapEnabler version to 1.3.7